--- a/app/src/main/res/layout/custom_preference.xml
+++ b/app/src/main/res/layout/custom_preference.xml
@@ -30,11 +30,10 @@
             android:layout_height="wrap_content"
             android:ellipsize="marquee"
             android:singleLine="true"
+            android:textColor="@color/colorOnBackground"
             android:textFontWeight="500"
-            android:textAppearance="?android:attr/textAppearanceListItem"
             android:textSize="14sp"
             tools:text="Title" />
-
 
 
         <TextView
@@ -43,10 +42,11 @@
             android:layout_height="wrap_content"
             android:layout_below="@android:id/title"
             android:layout_alignStart="@android:id/title"
-            android:maxLines="2"
-            android:textAppearance="?android:attr/textAppearanceSmall"
-            android:textColor="?android:attr/textColorSecondary"
+            android:maxLines="1"
+            android:textColor="@color/colorOnBackground"
+            android:textFontWeight="500"
             android:textSize="11sp"
+            android:textStyle="italic"
             tools:text="Summary" />
 
     </RelativeLayout>
