--- a/app/src/main/res/layout/folder_row.xml
+++ b/app/src/main/res/layout/folder_row.xml
@@ -47,6 +47,7 @@
                 tools:text="Foobar Project" />
 
             <TextView
+                android:visibility="gone"
                 android:id="@+id/timestamp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
