--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -16,6 +16,7 @@
     <item
         android:id="@+id/menu_folders"
         android:icon="@drawable/ic_menu"
+        app:iconTint="@color/colorOnBackground"
         android:iconTint="@color/colorOnBackground"
         android:orderInCategory="300"
         android:title="@string/folders"
