--- a/app/src/main/res/xml/prefs_proof_mode.xml
+++ b/app/src/main/res/xml/prefs_proof_mode.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="UTF-8" ?>
-<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <SwitchPreferenceCompat
-        app:layout="@layout/custom_preference_switch"
-        app:key="@string/pref_key_use_proof_mode"
+        android:layout="@layout/custom_preference_switch"
+        android:widgetLayout="@layout/custom_preference_widget_switch"
         app:allowDividerBelow="false"
         app:defaultValue="false"
-        app:title="@string/prefs_use_proofmode_title"
+        app:iconSpaceReserved="false"
+        app:key="@string/pref_key_use_proof_mode"
         app:singleLineTitle="false"
-        app:summary="@string/prefs_use_proofmode_summary" />
+        app:summary="@string/prefs_use_proofmode_summary"
+        app:title="@string/prefs_use_proofmode_title" />
 
 </PreferenceScreen>
