--- a/app/src/main/res/layout/activity_folders.xml
+++ b/app/src/main/res/layout/activity_folders.xml
@@ -25,20 +25,18 @@
             android:layout_marginHorizontal="8dp"
             android:id="@+id/rv_projects"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_margin="@dimen/activity_vertical_margin" />
 
-    </LinearLayout>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/bt_view_archived"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="@dimen/activity_vertical_margin"
+            android:layout_marginHorizontal="16dp"
+            android:text="@string/view_archived_folders" />
 
-    <com.google.android.material.floatingactionbutton.FloatingActionButton
-        android:id="@+id/fab_add"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="24dp"
-        android:contentDescription="@string/add_a_folder"
-        app:layout_anchor="@id/rv_projects"
-        app:layout_anchorGravity="bottom|end"
-        app:srcCompat="@drawable/baseline_add_24" />
+    </LinearLayout>
 
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
