--- a/app/src/main/res/layout/activity_onboarding23_instructions.xml
+++ b/app/src/main/res/layout/activity_onboarding23_instructions.xml
@@ -17,7 +17,7 @@
         android:layout_gravity="end"
         android:background="@color/colorTertiary">
 
-        <Button
+        <com.google.android.material.button.MaterialButton
             android:id="@+id/skip_button"
             style="@style/Widget.Material3.Button.TextButton"
             android:layout_width="wrap_content"
@@ -25,7 +25,8 @@
             android:layout_gravity="top|center_horizontal"
             android:layout_marginTop="24dp"
             android:text="@string/skip"
-            android:textColor="@color/colorOnPrimary" />
+            android:textFontWeight="600"
+            android:textColor="@color/colorOnBackground" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
