--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -43,9 +43,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
-            android:layout_marginVertical="8dp"
             android:orientation="vertical"
-            android:visibility="invisible"
+            android:visibility="gone"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -55,7 +54,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/folder_info_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:layout_marginVertical="8dp"
                 android:visibility="gone"
@@ -66,6 +65,7 @@
 
 
                 <LinearLayout
+                    android:id="@+id/folder_info_container_left"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
@@ -82,6 +82,7 @@
 
                     <!-- Separator -->
                     <ImageView
+                        android:id="@+id/folder_name_arrow"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:src="@drawable/keyboard_arrow_right"
@@ -95,6 +96,7 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    android:id="@+id/folder_info_container_right"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:elevation="1dp"
@@ -132,7 +134,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/folder_selection_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:layout_marginVertical="8dp"
                 android:visibility="gone"
@@ -214,7 +216,7 @@
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/folder_edit_container"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="56dp"
                 android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                 android:layout_marginVertical="8dp"
                 android:visibility="gone"
@@ -250,24 +252,23 @@
 
                     <com.google.android.material.textfield.TextInputLayout
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        app:hintEnabled="false"
+                        android:layout_height="52dp"
                         android:layout_marginEnd="24dp"
-                        app:errorEnabled="false"
                         android:minHeight="36dp"
                         app:boxBackgroundColor="@color/colorSurface"
                         app:boxBackgroundMode="none"
                         app:boxCollapsedPaddingTop="0dp"
-                        app:boxStrokeWidth="0dp">
+                        app:boxStrokeWidth="0dp"
+                        app:errorEnabled="false"
+                        app:hintEnabled="false">
 
                         <com.google.android.material.textfield.TextInputEditText
                             android:id="@+id/et_folder_name"
                             android:layout_width="match_parent"
-                            android:singleLine="true"
-
-                            android:maxLines="1"
-                            android:layout_height="wrap_content"
+                            android:layout_height="52dp"
                             android:imeOptions="actionDone"
+                            android:maxLines="1"
+                            android:singleLine="true"
                             android:textFontWeight="600"
                             android:textSize="16sp" />
 
