--- a/app/src/main/res/layout/rv_folders_row.xml
+++ b/app/src/main/res/layout/rv_folders_row.xml
@@ -1,70 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardBackgroundColor="@android:color/transparent"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="2dp">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:filterTouchesWhenObscured="true"
+    android:orientation="horizontal"
+    android:paddingHorizontal="8dp"
+    android:paddingVertical="16dp"
+    app:cardCornerRadius="8dp">
 
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+
+    <ImageView
+        android:id="@+id/rv_icon"
+        android:layout_width="24dp"
+        android:layout_height="24dp"
+        android:contentDescription="@string/folder_name"
+        tools:src="@drawable/ic_private_server" />
+
+    <TextView
+        android:id="@+id/rv_title"
+        tools:text="My folder"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/item_background_selector"
-        android:filterTouchesWhenObscured="true"
-        android:paddingHorizontal="8dp"
-        android:paddingVertical="16dp">
-
-        <LinearLayout
-            android:id="@+id/text_container"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:filterTouchesWhenObscured="true"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/rv_edit"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
-
-            <ImageView
-                android:id="@+id/rv_icon"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:contentDescription="@string/folder_name"
-                android:src="@drawable/ic_private_server"/>
-
-            <TextView
-                android:id="@+id/rv_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:layout_marginHorizontal="10dp"
-                android:gravity="center_vertical"
-                android:textSize="16sp" />
+        android:layout_gravity="center_vertical"
+        android:layout_marginHorizontal="10dp"
+        android:gravity="center_vertical"
+        android:textSize="18sp" />
 
 
-        </LinearLayout>
-
-
-        <ImageButton
-            android:id="@+id/rv_edit"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_gravity="center_vertical"
-            android:layout_marginEnd="16dp"
-            android:background="?attr/selectableItemBackgroundBorderless"
-            android:src="@drawable/ic_edit"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@id/text_container"
-            app:layout_constraintTop_toTopOf="parent"
-            app:tint="@color/colorOnBackground" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
-
-</androidx.cardview.widget.CardView>
+</LinearLayout>
