--- a/app/src/main/res/menu/menu_upload.xml
+++ b/app/src/main/res/menu/menu_upload.xml
@@ -5,9 +5,9 @@
     tools:context=".features.main.MainActivity">
 
     <item
-        android:id="@+id/menu_edit"
+        android:id="@+id/menu_done"
         android:orderInCategory="100"
-        android:title="@string/edit"
+        android:title="@string/done"
         android:visible="true"
         app:showAsAction="ifRoom|collapseActionView|withText" />
 
