--- a/app/src/main/res/xml/prefs_general.xml
+++ b/app/src/main/res/xml/prefs_general.xml
@@ -13,11 +13,12 @@
             android:icon="@null"
             android:iconSpaceReserved="false"
             android:key="@string/pref_app_passcode"
+            android:layout="@layout/custom_preference_switch"
             android:singleLineTitle="false"
             android:title="Lock app with passcode"
+            android:widgetLayout="@layout/custom_preference_widget_switch"
             app:icon="@null"
-            app:iconSpaceReserved="false"
-            app:summary="6 digit passcode" />
+            app:iconSpaceReserved="false" />
 
     </PreferenceCategory>
 
@@ -29,8 +30,10 @@
         <SwitchPreferenceCompat
             android:iconSpaceReserved="false"
             android:key="upload_wifi_only"
+            android:layout="@layout/custom_preference_switch"
             android:singleLineTitle="false"
             android:title="@string/only_upload_media_when_you_are_connected_to_wi_fi"
+            android:widgetLayout="@layout/custom_preference_widget_switch"
             app:defaultValue="false"
             app:iconSpaceReserved="false"
             app:singleLineTitle="false" />
@@ -38,6 +41,7 @@
         <Preference
             android:iconSpaceReserved="false"
             android:key="@string/pref_media_servers"
+            android:layout="@layout/custom_preference"
             android:singleLineTitle="true"
             android:summary="@string/pref_summary_media_servers"
             android:title="@string/pref_title_media_servers"
@@ -48,6 +52,7 @@
         <Preference
             android:iconSpaceReserved="false"
             android:key="@string/pref_media_folders"
+            android:layout="@layout/custom_preference"
             android:singleLineTitle="true"
             android:summary="@string/pref_summary_media_folders"
             android:title="@string/pref_title_media_folders"
@@ -78,6 +83,7 @@
         <Preference
             android:iconSpaceReserved="false"
             android:key="@string/pref_key_proof_mode"
+            android:layout="@layout/custom_preference"
             android:singleLineTitle="false"
             android:title="@string/proofmode"
             app:iconSpaceReserved="false" />
@@ -92,9 +98,11 @@
             android:enabled="false"
             android:iconSpaceReserved="false"
             android:key="@string/pref_key_use_tor"
+            android:layout="@layout/custom_preference_switch"
             android:singleLineTitle="false"
             android:summary="@string/prefs_use_tor_summary"
             android:title="@string/prefs_use_tor_title"
+            android:widgetLayout="@layout/custom_preference_widget_switch"
             app:defaultValue="false"
             app:enabled="true"
             app:iconSpaceReserved="false" />
@@ -105,22 +113,35 @@
         android:layout="@layout/custom_preference_category"
         android:title="General">
 
-        <ListPreference
-            android:dialogTitle="Theme"
+        <!--        <ListPreference-->
+        <!--            android:dialogTitle="Theme"-->
+        <!--            android:iconSpaceReserved="false"-->
+        <!--            android:key="theme"-->
+        <!--            android:singleLineTitle="false"-->
+        <!--            android:summary="%s"-->
+        <!--            android:title="@string/prefs_theme_title"-->
+        <!--            app:defaultValue="@string/prefs_theme_val_system"-->
+        <!--            app:entries="@array/ar_prefs_theme_labels"-->
+        <!--            app:entryValues="@array/ar_prefs_theme_val"-->
+        <!--            app:iconSpaceReserved="false"-->
+        <!--            app:useSimpleSummaryProvider="true" />-->
+
+        <SwitchPreferenceCompat
+            android:defaultValue="false"
+            android:icon="@null"
             android:iconSpaceReserved="false"
-            android:key="theme"
-            android:singleLineTitle="false"
-            android:summary="%s"
-            android:title="@string/prefs_theme_title"
-            app:defaultValue="@string/prefs_theme_val_system"
-            app:entries="@array/ar_prefs_theme_labels"
-            app:entryValues="@array/ar_prefs_theme_val"
-            app:iconSpaceReserved="false"
-            app:useSimpleSummaryProvider="true" />
+            android:key="@string/pref_key_use_dark_mode"
+            android:layout="@layout/custom_preference_switch"
+            android:singleLineTitle="true"
+            android:title="Switch to dark mode"
+            android:widgetLayout="@layout/custom_preference_widget_switch"
+            app:icon="@null"
+            app:iconSpaceReserved="false" />
 
         <Preference
             android:iconSpaceReserved="false"
             android:key="@string/pref_key_about_app"
+            android:layout="@layout/custom_preference"
             android:singleLineTitle="true"
             android:summary="Discover the Save app"
             android:title="Save by Open Archive"
@@ -134,6 +155,7 @@
         <Preference
             android:iconSpaceReserved="false"
             android:key="@string/pref_key_privacy_policy"
+            android:layout="@layout/custom_preference"
             android:singleLineTitle="true"
             android:summary="@string/pref_summary_privacy_policy"
             android:title="@string/pref_title_privacy_policy"
@@ -147,6 +169,7 @@
         <Preference
             android:iconSpaceReserved="false"
             android:key="@string/pref_key_app_version"
+            android:layout="@layout/custom_preference"
             android:singleLineTitle="true"
             android:title="Version"
             app:enabled="false"
@@ -155,12 +178,11 @@
 
     </PreferenceCategory>
 
-<!--    <PreferenceCategory-->
-<!--        android:layout="@layout/custom_preference_category"-->
-<!--        android:title="About">-->
+    <!--    <PreferenceCategory-->
+    <!--        android:layout="@layout/custom_preference_category"-->
+    <!--        android:title="About">-->
 
 
-
-<!--    </PreferenceCategory>-->
+    <!--    </PreferenceCategory>-->
 
 </PreferenceScreen>
