--- a/app/src/main/res/layout/activity_review.xml
+++ b/app/src/main/res/layout/activity_review.xml
@@ -12,94 +12,132 @@
         android:id="@+id/common_app_bar"
         layout="@layout/common_app_bar" />
 
+
     <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/single_container"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/metadata_container"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/common_app_bar"
-        app:layout_constraintBottom_toBottomOf="parent">
+        app:layout_constraintVertical_weight="0.55"
+        tools:visibility="gone">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/single_container"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+        <com.github.derlio.waveform.SimpleWaveformView
+            android:id="@+id/waveform"
+            android:layout_width="match_parent"
+            android:layout_height="200dp"
+            app:indicatorColor="#aa0000"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:waveformColor="#999999"
+            tools:visibility="visible" />
+
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@color/colorBackground"
+            android:contentDescription="@string/iv_content_desc"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/no_thumbnail" />
 
-            <com.github.derlio.waveform.SimpleWaveformView
-                android:id="@+id/waveform"
-                android:layout_width="match_parent"
-                android:layout_height="200dp"
-                app:indicatorColor="#aa0000"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:waveformColor="#999999" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:background="@color/colorBackground"
-                android:scaleType="fitStart"
-                android:contentDescription="@string/iv_content_desc"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/no_thumbnail" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/batch_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/metadata_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/common_app_bar"
+        app:layout_constraintVertical_weight="0.55"
+        tools:visibility="visible">
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:id="@+id/batch_container"
-            android:layout_width="match_parent"
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/batch_img_container_1"
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="16dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="0dp"
+            app:layout_constraintDimensionRatio="4:3"
+            app:layout_constraintHeight_max="320dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintWidth_max="320dp"
+            app:srcCompat="@drawable/no_thumbnail">
 
             <ImageView
                 android:id="@+id/batch_img_1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                app:layout_constraintDimensionRatio="4:3"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="16dp"
                 android:scaleType="centerCrop"
-                app:layout_constraintHeight_max="320dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_max="320dp"
                 app:srcCompat="@drawable/no_thumbnail" />
+
+        </com.google.android.material.card.MaterialCardView>
+
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/batch_img_container_2"
+            android:layout_width="320dp"
+            android:layout_height="380dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="4dp"
+            app:layout_constraintDimensionRatio="4:3"
+            app:layout_constraintStart_toStartOf="@id/batch_img_container_1"
+            app:layout_constraintTop_toTopOf="@id/batch_img_container_1"
+            app:srcCompat="@drawable/no_thumbnail">
 
             <ImageView
                 android:id="@+id/batch_img_2"
-                android:layout_width="320dp"
-                app:layout_constraintDimensionRatio="4:3"
-                android:layout_height="380dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
-                app:layout_constraintStart_toStartOf="@id/batch_img_1"
-                app:layout_constraintTop_toTopOf="@id/batch_img_1"
                 app:srcCompat="@drawable/no_thumbnail" />
+        </com.google.android.material.card.MaterialCardView>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/batch_img_container_3"
+            android:layout_width="320dp"
+            android:layout_height="380dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="32dp"
+            app:cardCornerRadius="8dp"
+            app:cardElevation="8dp"
+            app:layout_constraintStart_toStartOf="@id/batch_img_container_2"
+            app:layout_constraintTop_toTopOf="@id/batch_img_container_2"
+            app:srcCompat="@drawable/no_thumbnail">
 
             <ImageView
                 android:id="@+id/batch_img_3"
-                android:layout_width="320dp"
-                android:layout_height="380dp"
-                android:layout_marginStart="32dp"
-                android:layout_marginTop="32dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:scaleType="centerCrop"
                 app:layout_constraintStart_toStartOf="@id/batch_img_2"
                 app:layout_constraintTop_toTopOf="@id/batch_img_2"
                 app:srcCompat="@drawable/no_thumbnail" />
+        </com.google.android.material.card.MaterialCardView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/actions_container"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@id/metadata_container"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/common_app_bar">
 
         <FrameLayout
             android:id="@+id/frameLayout"
@@ -116,9 +154,10 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginTop="16dp"
-            android:padding="4dp"
-            android:textColor="@color/colorOnBackground"
             android:background="@drawable/pill_bg"
+            android:paddingVertical="4dp"
+            android:paddingHorizontal="6dp"
+            android:textColor="@color/colorOnBackground"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             tools:text="34/104" />
@@ -135,52 +174,56 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/bt_page_back"
+            style="@style/Widget.Material3.Button.IconButton"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="48dp"
+            app:icon="@drawable/ic_arrow_left_ios"
+            app:iconGravity="textStart"
+            app:iconSize="54dp"
+            app:iconTint="@color/colorOnBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent">
+
+
+        </com.google.android.material.button.MaterialButton>
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/bt_page_frwd"
+            style="@style/Widget.Material3.Button.IconButton"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="0dp"
+            app:icon="@drawable/ic_arrow_right_ios"
+            app:iconGravity="textStart"
+            app:iconSize="54dp"
+            app:iconTint="@color/colorOnBackground"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/bt_page_back"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginStart="0dp"
-        android:text="⟨"
-        android:textColor="@color/colorOnBackground"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/metadata"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/common_app_bar"
-        tools:ignore="HardcodedText" />
-
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/bt_page_frwd"
-        style="?android:attr/buttonBarButtonStyle"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginTop="48dp"
-        android:layout_marginEnd="0dp"
-        android:text="⟩"
-        android:textColor="@color/colorOnBackground"
-        android:textSize="32sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/metadata"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/common_app_bar"
-        tools:ignore="HardcodedText" />
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:id="@+id/metadata"
+        android:id="@+id/metadata_container"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:alpha="0.85"
         android:background="@color/colorBackground"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent">
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_weight="0.45">
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/location_container"
+            style="@style/OATextInputLayoutStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
@@ -190,8 +233,7 @@
             app:layout_constraintBottom_toTopOf="@id/description_container"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:startIconDrawable="@drawable/ic_location_unselected">
+            app:layout_constraintTop_toTopOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/location"
@@ -204,23 +246,24 @@
 
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/description_container"
+            style="@style/OATextInputLayoutStyle"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="120dp"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:startIconDrawable="@drawable/ic_edit_unselected">
+            app:layout_constraintStart_toStartOf="parent">
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/description"
                 android:layout_width="match_parent"
-                android:minLines="3"
-                android:layout_height="wrap_content"
+                android:layout_height="120dp"
+                android:gravity="top|start"
                 android:hint="@string/add_notes_optional"
-                android:inputType="textShortMessage" />
+                android:inputType="textMultiLine"
+                android:minLines="3" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
