--- a/app/src/main/res/layout/fragment_upload_manager.xml
+++ b/app/src/main/res/layout/fragment_upload_manager.xml
@@ -2,6 +2,7 @@
 <androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@drawable/rounded_bottom_sheet_background"
     android:layout_height="match_parent"
     android:fillViewport="true"
     app:layout_behavior="@string/bottom_sheet_behavior">
@@ -27,6 +28,7 @@
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:gravity="center_vertical"
+            android:layout_marginBottom="16dp"
             android:paddingBottom="8dp">
 
             <!-- Column scope: Title & Subtitle centered -->
@@ -39,18 +41,20 @@
 
                 <TextView
                     android:id="@+id/title"
+                    android:textFontWeight="600"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Edit Queue"
-                    android:textAppearance="?attr/textAppearanceHeadline6"
+                    android:textSize="16sp"
                     android:textColor="?attr/colorOnSurface" />
 
                 <TextView
                     android:id="@+id/subtitle"
+                    android:textFontWeight="500"
+                    android:textSize="11sp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Uploading is paused"
-                    android:textAppearance="?attr/textAppearanceBody2"
                     android:textColor="?attr/colorOnSurface" />
             </LinearLayout>
 
@@ -62,7 +66,9 @@
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
                 android:layout_alignParentEnd="true"
-                android:text="Done"
+                android:text="@string/done"
+                android:textAllCaps="true"
+                android:textFontWeight="600"
                 android:textColor="@color/colorOnBackground"
                 android:layout_gravity="end" />
         </RelativeLayout>
