--- a/app/src/main/res/layout/content_cc.xml
+++ b/app/src/main/res/layout/content_cc.xml
@@ -31,6 +31,7 @@
 
         <TextView
             android:id="@+id/tv_cc_label"
+            android:textFontWeight="500"
             android:layout_width="240dp"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -57,6 +58,7 @@
 
         <TextView
             android:layout_width="wrap_content"
+            android:textFontWeight="500"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="@string/info_license_deriv"
@@ -83,6 +85,7 @@
 
         <TextView
             android:layout_width="wrap_content"
+            android:textFontWeight="500"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:text="@string/info_license_sharealike"
@@ -109,6 +112,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textFontWeight="500"
             android:layout_centerVertical="true"
             android:text="@string/info_license_comm"
             android:textAppearance="?android:attr/textAppearanceSmall"
