--- a/app/src/main/res/layout/fragment_web_dav.xml
+++ b/app/src/main/res/layout/fragment_web_dav.xml
@@ -35,7 +35,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
-                android:layout_marginVertical="24dp">
+                android:layout_marginTop="48dp"
+                android:layout_marginBottom="24dp">
 
                 <ImageView
                     android:layout_width="48dp"
