--- a/app/src/main/res/layout/fragment_webdav_setup_license.xml
+++ b/app/src/main/res/layout/fragment_webdav_setup_license.xml
@@ -16,6 +16,7 @@
         android:paddingBottom="@dimen/activity_vertical_margin">
 
         <LinearLayout
+            android:layout_marginTop="48dp"
             android:id="@+id/email_login_form"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -98,6 +99,7 @@
                 tools:ignore="ButtonStyle">
 
                 <Button
+                    android:textFontWeight="500"
                     android:id="@+id/bt_next"
                     android:paddingHorizontal="32dp"
                     android:layout_width="match_parent"
