--- a/app/src/main/res/layout/rv_media_row_small.xml
+++ b/app/src/main/res/layout/rv_media_row_small.xml
@@ -10,18 +10,18 @@
 
     <LinearLayout
         android:id="@+id/btn_delete_layout"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
         android:gravity="center"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageButton
-            android:background="?attr/selectableItemBackgroundBorderless"
             android:id="@+id/btn_delete"
             android:layout_width="24dp"
             android:layout_height="24dp"
+            android:background="?attr/selectableItemBackgroundBorderless"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_trash" />
     </LinearLayout>
@@ -30,6 +30,7 @@
         android:id="@+id/container"
         android:layout_width="80dp"
         android:layout_height="80dp"
+        android:padding="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btn_delete_layout"
         app:layout_constraintTop_toTopOf="parent">
@@ -103,33 +104,44 @@
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-    <TextView
-        android:id="@+id/title"
+    <LinearLayout
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:singleLine="true"
-        android:textStyle="bold"
-        app:layout_constraintEnd_toStartOf="@+id/handle"
-        app:layout_constraintStart_toEndOf="@id/container"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:text="This is the title" />
-
-    <TextView
-        android:id="@+id/file_info"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:singleLine="true"
+        android:layout_height="match_parent"
+        android:gravity="center_vertical"
+        android:orientation="vertical"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/handle"
         app:layout_constraintStart_toEndOf="@+id/container"
-        app:layout_constraintTop_toBottomOf="@id/title"
-        tools:text="This is the date" />
+        app:layout_constraintTop_toTopOf="parent">
+
+
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:singleLine="true"
+            android:textFontWeight="500"
+            android:textSize="14sp"
+            tools:text="This is the title" />
+
+        <TextView
+            android:id="@+id/file_info"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:textSize="11sp"
+            android:singleLine="true"
+            tools:text="This is the date" />
+
+    </LinearLayout>
+
 
     <ImageView
         android:id="@+id/handle"
-        android:layout_width="?listPreferredItemHeight"
-        android:layout_height="match_parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_gravity="center_vertical|end"
         android:importantForAccessibility="no"
