--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -18,6 +18,16 @@
 
 
         <item name="android:textViewStyle">@style/OATextViewStyle</item>
+        <item name="textAppearanceHeadlineSmall">@style/TextAppearance.SaveApp.18pt</item>
+
+        <item name="textAppearanceBodyLarge">@style/TextAppearance.SaveApp.16pt</item>
+        <item name="textAppearanceBodyMedium">@style/TextAppearance.SaveApp.14pt</item>
+        <item name="textAppearanceBodySmall">@style/TextAppearance.SaveApp.11pt</item>
+        <item name="textAppearanceLabelMedium">@style/TextAppearance.Material3.BodySmall</item>
+
+        <item name="textAppearanceTitleLarge">@style/TextAppearance.App.TitleLarge</item>
+        <item name="textAppearanceTitleMedium">@style/TextAppearance.App.TitleMedium</item>
+
 
         <item name="android:windowDrawsSystemBarBackgrounds">true</item>
         <item name="android:statusBarColor">@color/colorPrimary</item>
@@ -42,7 +52,7 @@
         <item name="borderlessButtonStyle">@style/Widget.App.Button.TextButton</item>
         <item name="materialButtonOutlinedStyle">@style/Widget.App.Button.OutlinedButton</item>
 
-        <!-- button text style -->
+        <!--        Button text style -->
         <item name="textAppearanceLabelLarge">@style/TextAppearance.App.Button</item>
 
         <!--        For App Bar Action Menu Text Color-->
@@ -52,9 +62,6 @@
         <!--        Input Layout Style-->
         <item name="textInputStyle">@style/OATextInputLayoutStyle</item>
 
-        <item name="textAppearanceTitleLarge">@style/TextAppearance.App.TitleLarge</item>
-        <item name="textAppearanceTitleMedium">@style/TextAppearance.App.TitleMedium</item>
-        <item name="textAppearanceBodySmall">@style/TextAppearance.App.BodySmall</item>
         <item name="shapeAppearanceSmallComponent">@style/ShapeAppearance.SaveApp.SmallComponent
         </item>
         <item name="materialSwitchStyle">@style/Widget.SaveApp.Switch</item>
@@ -70,7 +77,7 @@
         <item name="android:divider">@drawable/save_list_item_spacing_small</item>
         <item name="android:dividerHeight">2dp</item>
         <item name="alertDialogTheme">@style/AlertDialogTheme</item>
-<!--        <item name="preferenceInformationStyle">@style/SaveApp.Preference.Information</item>-->
+        <!--        <item name="preferenceInformationStyle">@style/SaveApp.Preference.Information</item>-->
         <item name="switchPreferenceCompatStyle">@style/SaveApp.Preference.SwitchPreference</item>
     </style>
 
@@ -83,7 +90,6 @@
         <item name="android:textSize">12sp</item>
         <item name="android:widgetLayout">@layout/custom_preference_widget_switch</item>
     </style>
-
 
 
     <style name="SaveAppBottomSheetTheme" parent="ThemeOverlay.Material3.DayNight.BottomSheetDialog">
@@ -137,12 +143,14 @@
     <style name="SaveApp.Widget.AppBarStyle" parent="Widget.Material3.AppBarLayout">
         <item name="android:background">@color/colorPrimary</item>
         <item name="colorOnPrimary">@color/white</item>
+        <item name="titleTextAppearance">@style/TextAppearance.App.TitleLarge</item>
     </style>
 
     <style name="SaveApp.Widget.MaterialToolbarStyle" parent="Widget.Material3.Toolbar">
         <item name="colorControlNormal">@color/white</item>
         <item name="titleTextColor">@color/white</item>
         <item name="subtitleTextColor">@color/white</item>
+        <item name="navigationIcon">@drawable/ic_arrow_back_ios</item>
         <item name="navigationIconTint">@color/white</item>
         <item name="android:gravity">center_horizontal</item>
         <item name="android:layout_gravity">center_horizontal</item>
@@ -209,6 +217,55 @@
         <item name="android:fontFamily">@font/montserrat</item>
         <item name="android:textColor">@color/colorText</item>
         <item name="android:textColorLink">@color/colorTertiary</item>
+    </style>
+
+    <!-- 16pt (16sp) text style -->
+    <style name="TextAppearance.SaveApp.16pt" parent="TextAppearance.Material3.BodyLarge">
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textSize">16sp</item>
+        <item name="android:lineHeight">20sp</item>
+        <item name="android:fontWeight">600</item> <!-- SemiBold -->
+    </style>
+
+    <!-- 18pt (18sp) text style -->
+    <style name="TextAppearance.SaveApp.18pt" parent="TextAppearance.Material3.HeadlineSmall">
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:lineHeight">22sp</item>
+        <item name="android:fontWeight">600</item> <!-- SemiBold -->
+    </style>
+
+    <!-- 14pt (14sp) text style -->
+    <style name="TextAppearance.SaveApp.14pt" parent="TextAppearance.Material3.BodyMedium">
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineHeight">16sp</item>
+        <item name="android:fontWeight">500</item> <!-- Medium -->
+    </style>
+
+    <!-- 11pt (11sp) text style -->
+    <style name="TextAppearance.SaveApp.11pt" parent="TextAppearance.Material3.BodySmall">
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:lineHeight">14sp</item>
+        <item name="android:fontWeight">500</item> <!-- Medium -->
+    </style>
+
+    <!-- 14pt Link Style -->
+    <style name="TextAppearance.SaveApp.14ptLink" parent="TextAppearance.Material3.BodyMedium">
+        <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:lineHeight">16sp</item>
+        <item name="android:fontWeight">500</item> <!-- Medium -->
+        <item name="android:textColor">@color/colorTertiary</item>
+    </style>
+
+    <!-- 11pt Italic Style -->
+    <style name="TextAppearance.SaveApp.11ptItalic" parent="TextAppearance.Material3.BodySmall">
+        <item name="android:fontFamily">@font/montserrat_italic</item>
+        <item name="android:textSize">11sp</item>
+        <item name="android:lineHeight">14sp</item>
+        <item name="android:fontStyle">italic</item>
     </style>
 
     <style name="Widget.App.FloatingActionButton" parent="Widget.Material3.FloatingActionButton.Primary">
@@ -294,6 +351,17 @@
         <item name="hintTextColor">@color/c23_teal</item>
         <item name="cursorColor">@color/c23_teal</item>
         <item name="hintEnabled">false</item>
+        <item name="placeholderTextAppearance">@style/ItalicPlaceholderTextAppearance</item>
+        <item name="editTextStyle">@style/ItalicPlaceholderEditTextStyle</item>
+    </style>
+
+
+    <style name="ItalicPlaceholderEditTextStyle" parent="Widget.Material3.TextInputEditText.OutlinedBox">
+        <item name="android:textAppearance">@style/ItalicPlaceholderTextAppearance</item>
+    </style>
+
+    <style name="ItalicPlaceholderTextAppearance" parent="TextAppearance.Material3.BodyLarge">
+        <item name="android:textStyle">italic</item>
     </style>
 
     <style name="Widget.SaveApp.TextInputLayout" parent="Widget.Material3.TextInputLayout.OutlinedBox">
@@ -316,7 +384,7 @@
         <!--        <item name="colorOnSurface">@color/colorText</item>-->
         <item name="colorError">@color/colorError</item>
         <item name="textAppearanceTitleMedium">@style/TextAppearance.App.TitleMedium</item>
-        <item name="textAppearanceBodySmall">@style/TextAppearance.App.BodySmall</item>
+        <item name="textAppearanceBodySmall">@style/TextAppearance.SaveApp.11pt</item>
         <item name="editTextStyle">@style/Widget.Material3.TextInputEditText.FilledBox</item>
     </style>
 
@@ -328,17 +396,16 @@
     <style name="TextAppearance.App.TitleLarge" parent="TextAppearance.Material3.TitleLarge">
         <item name="fontFamily">@font/montserrat</item>
         <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:textFontWeight">600</item>
     </style>
 
     <style name="TextAppearance.App.TitleMedium" parent="TextAppearance.Material3.TitleMedium">
         <item name="fontFamily">@font/montserrat</item>
         <item name="android:fontFamily">@font/montserrat</item>
+        <item name="android:fontWeight">500</item>
     </style>
 
-    <style name="TextAppearance.App.BodySmall" parent="TextAppearance.Material3.BodySmall">
-        <item name="fontFamily">@font/montserrat</item>
-        <item name="android:fontFamily">@font/montserrat</item>
-    </style>
 
     <style name="ShapeAppearance.SaveApp.SmallComponent" parent="ShapeAppearance.Material3.SmallComponent">
         <item name="cornerFamily">rounded</item>
