--- a/app/src/main/res/layout/view_section.xml
+++ b/app/src/main/res/layout/view_section.xml
@@ -25,7 +25,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="4dp"
-            android:textSize="12sp"
+            android:textSize="11sp"
+            android:textColor="@color/colorOnBackground"
+            android:textFontWeight="500"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -38,6 +40,9 @@
             android:layout_marginStart="8dp"
             android:background="@drawable/pill"
             android:gravity="center"
+            android:textSize="11sp"
+            android:textFontWeight="500"
+            android:textColor="@color/colorOnBackground"
             android:paddingStart="8dp"
             android:paddingEnd="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
